--- a/test.css
+++ b/test.css
@@ -1,21 +1,41 @@
-.flex-container {
-    background-color: white;
-    margin: 10px;
+.container {
+	background-color: rgb(250,250,250);
+	margin: 10px;
+	height: 300px;
 
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
 }
 
-.flex-items {
-  background: teal;
+.container-item {
+	background: rgb(36, 130, 39);
   color: white;
   font-size: 25px;
   text-align: center;
 
   width: 70px;
   line-height: 50px;
-  margin: 10px;
+  margin: 10px; 
+}
 
-  
+.grid-container {
+	background-color: rgb(250,250,250);
+	margin: 10px;
+	height: 500px;
+
+	display: grid;
+	grid-template-columns: auto auto auto;
+	grid-template-rows: auto auto;
+}
+
+.grid-item {
+  color: black;
+  font-size: 25px;
+  text-align: center;
+
+  width: 70px;
+  line-height: 40px;
+  margin: 10px; 
 }
