--- a/style.css
+++ b/style.css
@@ -84,9 +84,8 @@ body {
     color: #ced6ffbd;
     font-family: 'Jura', sans-serif;
     font-size: 1.15em;
-    /*border: 5px solid red;*/
-    /* margin: 10px 500px 10px 500px;*/
     text-align: center;
+    text-transform: capitalize;
 }
 
 .image-svg {
@@ -94,11 +93,17 @@ body {
     float: right;
     margin-right: 35px;
     margin-bottom: 20px;
+    transform: scale(0.9);
+}
+
+.image-svg:hover {
+    transform: scale(1);
 }
 
 
 table{
     color: unset;
+    margin: auto;
 }
 
 .table-header {
@@ -112,7 +117,7 @@ table{
 .table-contant {
     font-family:'Juna', sans-serif;
     background-color:#00CC99 ;
-    text-align: left;
+    text-align: center;
 }
 
 .form-text {
